--- a/Resume.html
+++ b/Resume.html
@@ -10,7 +10,7 @@
             </p>
             <hr>
             <center>
-                <img src="1.png" alt="Nehal Kumar" height="300" width="300">
+                <img src="NN.png" alt="Nehal Kumar" height="300" width="300">
             </center>
             <hr>
             <center>
@@ -20,14 +20,14 @@
                     <p>About Me</p>
                 </center>
                 </h2>
-                    <p>The High Speed Low Drag (HSLD) bomb is a family of new generation short range air-dropped precision-guided munition that is currently being developed by India's Defence Research and Development Organisation (DRDO).                    </p>
+                    <p>I am adaptable, trustworthy, and very good at keeping my word. I am a person who works hard and is enthused, motivated by myself, dependable, and responsible. I am a responsible team player who can easily adjust to any difficult circumstances. I have the ability to operate well both independently and in a collaborative setting.</p>
                     <hr>
                     <center>
                         <h2>
                             <p style="background-color: blue;"
                       <p>Skills</p>
                     </h2>  
-                      <p>The High Speed Low Drag (HSLD) bomb is a family of new generation short range air-dropped precision-guided munition that is currently being developed by India's Defence Research and Development Organisation (DRDO).</p>                  
+                      <p>I am a team player,problem solver and critical thinker</p>                  
                     </center>
                     <hr>
                     <center>
@@ -37,8 +37,9 @@
                            <p>Hobbies</p> 
                         </h2>
                                                     </center>
-                            The High Speed Low Drag (HSLD) bomb is a family of new generation short range air-dropped precision-guided munition that is currently being developed by India's Defence Research and Development Organisation (DRDO).
+                           I love reading books, listening to music and going to the gym.
                         </p>
+                        <center>
                          <hr>
                          <center>
                             <h2>
