--- a/myres.html
+++ b/myres.html
@@ -10,7 +10,7 @@
             </p>
             <hr>
             <center>
-                <img src="n.png" alt="Nehal Kumar" height="300" width="300">
+                <img src="NN.png" alt="Nehal Kumar" height="300" width="300">
             </center>
             <hr>
             <center>
