--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
                             <footer>
 
-                            <a href="https://github.com/LeonWolf007" target=_blank">
-                        <img src="GG.jfif" alt="github"width="40"height="40">                     
+                            <a href="https://github.com/NehalKumar007" target=_blank">
+                        <img src="in.jfif" alt="github"width="40"height="40">                     
                         <a href="https://www.linkedin.com/in/nehal-kumar-bb54a3225/ "target=_blank">
                          <img src="th.jfif" alt="Linkedin"width="40"height="40">
                             </a>
