--- a/myres.html
+++ b/myres.html
@@ -10,7 +10,7 @@
             </p>
             <hr>
             <center>
-                <img src="NN.png" alt="Nehal Kumar" height="300" width="300">
+                <img src="n.png" alt="Nehal Kumar" height="300" width="300">
             </center>
             <hr>
             <center>
@@ -63,7 +63,7 @@
                             <footer>
 
                             <a href="https://github.com/LeonWolf007" target=_blank">
-                        <img src="GG.jfif" alt="github"width="40"height="40">                     
+                        <img src="in.jfif" alt="github"width="40"height="40">                     
                         <a href="https://www.linkedin.com/in/nehal-kumar-bb54a3225/ "target=_blank">
                          <img src="th.jfif" alt="Linkedin"width="40"height="40">
                             </a>
